[gd_scene load_steps=7 format=3 uid="uid://bu1km42riw2u7"]

[ext_resource type="Script" path="res://scripts/demo_player.gd" id="1_b5ktt"]
[ext_resource type="Texture2D" uid="uid://bone6fy30sgv0" path="res://assets/demo_player/platformChar_idle.png" id="2_txyn5"]
[ext_resource type="Texture2D" uid="uid://cyaqt674f4bje" path="res://assets/demo_player/charecter.png" id="3_3ohi6"]
[ext_resource type="PackedScene" uid="uid://bi603frbfcrcf" path="res://scenes/ui.tscn" id="5_8pbfp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3u1r6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_txyn5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3ohi6")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqfia"]
size = Vector2(41, 64)

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_b5ktt")

[node name="PlayerAnim" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_3u1r6")
animation = &"walk"
frame_progress = 0.416664

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_hqfia")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" parent="." instance=ExtResource("5_8pbfp")]
offset_left = -538.0
offset_top = -287.0
offset_right = -538.0
offset_bottom = -287.0

[node name="SpeedPowerUp" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="SpeedPowerUp" to="." method="_on_speed_power_up_timeout"]
